--- a/Weather.html
+++ b/Weather.html
@@ -1,66 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<meta charset="UTF-8">
 		<title>Weather in your City</title>
-		<!-- Bootstrap -->
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		
-		<!--  <link href="css/bootstrap.min.css" rel="stylesheet"> -->
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+		  <link rel="stylesheet" href="tacit-0.6.1.min.css" />
+		  <style media="screen">
+
+		  </style>
 	</head>
 	<body>
-		<div id="MonFormulaire_1" class="container">
-		<h1>Weather in your City</h1>	
-		<form class="form-horizontal">
-			<fieldset>
-				<!-- Form Name -->
-				<legend>Form Name</legend>
-				<!-- Text input-->
-				<div class="form-group">
-					<label class="col-md-4 control-label" for="saisir une ville">Quel temps fait-il à :</label>
-					<div class="col-md-4">
-						<input id="ville_saisie" name="saisir une ville" type="text" placeholder="votre ville" class="form-control input-md">
-						<span class="help-block">ex: Bordeaux, Pessac</span>
-						<script type="text/javascript">
-						var maVille = ville_saisie
-							alert(maVille)
-						</script>
-					</div>
-				</div>
-				<!-- Search input-->
-				<div class="form-group">
-					<label class="col-md-4 control-label" for="searchTown">ville recherchée</label>
-					<div class="col-md-4">
-						<input id="searchTown" name="searchTown" type="search" placeholder="saisir Ville" class="form-control input-md" required="">
-						<p class="help-block">Pessac, Paris</p>
-					</div>
-				</div>
-			</fieldset>
-		</form>
-		</div> 
+		<h1>Weather in your City</h1>
+		<div class="formgroup">
+			<label  for="saisir une ville">Quel temps fait-il dans votre ville?</label>
+			<!-- <form action="recherche_meteo.js"> -->
+				saisir une ville:<br>
+				<input id ="maCity" type="text" name="city" placeholder="Saisissez une ville" value=""  required>
+				<!-- <span class="help-block"><i>Saisissez le nom d'une ville</i></span> 
+				placeholder="Saisissez une ville" -->
+				<input type="text" id="country" value="FRANCE"><br>
+				
+
+			<div id="resultat">
+				<div id="cityFound"></div>
+				<!-- <div> </div> <div id="temps"></div> -->
+			</div>	
+			<!-- </form> -->
+			<input type="submit" id="mySubmit" value="Rechercher"> 
+				<!-- <input type="reset" value="Effacer"><br> -->
+			
 		
-		<script type="text/javascript" src="recherche_meteo.js" charset="utf-8"></script>
-
-
-
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="js/bootstrap.min.js"></script>
-
-	</body>
+	</div>
+	
+	
+	<script type="text/javascript" src="recherche_meteo.js" charset="utf-8"></script>
+	<!-- <script type="text/javascript" src="Creation_dune_requete_HTTP_AJAX.js" charset="utf-8"></script> -->
+	
+</body>
 </html>
